--- a/html_projects/rxjs-obervable-example/rxjs_observable_example.html
+++ b/html_projects/rxjs-obervable-example/rxjs_observable_example.html
@@ -19,9 +19,10 @@
         }
         
         .container {
-            width: 100vw;
+            width: 95vw;
             height: 100vh;
             text-align: center;
+            padding: 10px;
         }
         
         h1 {
