minor observer post update

--- a/blog_data/html_files/observer_pattern_and_reactive_programming.html
+++ b/blog_data/html_files/observer_pattern_and_reactive_programming.html
@@ -133,7 +133,7 @@ Callback2: value 99</pre>
 
 <p>
     <figcaption class="w3-center">
-        Importing RxJS in Vanilla JavaScript File
+        Importing RxJS in HTML File
     </figcaption>
     <pre><code class="language-html">&#60;script src="https://unpkg.com/rxjs@7.8.1/dist/bundles/rxjs.umd.min.js"&#62;&#60;/script&#62;</code></pre>
 </p>
