updated blog post and base blog reference

--- a/blog_data/html_files/Traditional_Irish_Melodies_Workshop_March_24th_2024_Resources.html
+++ b/blog_data/html_files/Traditional_Irish_Melodies_Workshop_March_24th_2024_Resources.html
@@ -1,5 +1,5 @@
 <p>
-    Jannell Canerday and John Walsh conducted a Traditional Irish Melodies workshop
+    Jannell C. and John W. conducted a Traditional Irish Melodies workshop
     at the Louisville Folk School. Talked about the banjo in irish music, fathers of the
     irish banjo and taught some irish tunes. Below are some audio
     and sheet music references.
@@ -9,7 +9,7 @@
 <h2>Polka: Bhios La I bPort Lairge</h2>
 <div class="w3-display-container w3-center w3-padding-large">
     <figcaption class="w3-center">
-        <b>Bhios La I bPort Lairge played by Jannell Canerday and John Walsh</b>
+        <b>Bhios La I bPort Lairge played by Jannell C. and John W.</b>
     </figcaption>
     <audio controls>
         <source src="../static/audio/Port Lairge (Polka).mp3" type="audio/mp3">
@@ -17,23 +17,21 @@
     </audio>
 </div>
 
-<div class="w3-display-container w3-center w3-padding-small">
+<div class="w3-container  w3-center w3-padding-small">
     <figcaption class="w3-center">
         <b>Bhios La I bPort Lairge (polka, translates to A Day in Waterford)</b>
     </figcaption>
     <img 
-        src="../static/images/sheet_music/Port Lairge - Polka.png"
-        style="max-width: 800px;"
-        alt="Port Lairge - Polka"
         class="w3-image"
-    >
+        src="../static/images/sheet_music/Port Lairge - Polka.png"
+        alt="Port Lairge - Polka">
 </div>
 
 <h2>Jigs: The Cordal and Vincent Campbell's</h2>
 
 <div class="w3-display-container w3-center w3-padding-large">
     <figcaption class="w3-center">
-        <b>The Cordal - Vincent Campbell's played by Jannell Canerday and John Walsh</b>
+        <b>The Cordal - Vincent Campbell's played by Jannell C. and John W.</b>
     </figcaption>
     <audio controls>
         <source src="../static/audio/The Cordal - Vincent Campbell's (Jigs).mp3" type="audio/mp3">
@@ -41,48 +39,44 @@
     </audio>
 </div>
 
-<div class="w3-display-container w3-center w3-padding-large">
+<div class="w3-container  w3-center w3-padding-small">
     <figcaption class="w3-center">
         <b>The Cordal</b>
     </figcaption>
     <img 
-        src="../static/images/sheet_music/The Cordal - Jig.png"
-        style="max-width: 800px;"
-        alt="Port Lairge - Polka"
         class="w3-image"
-    >
+        src="../static/images/sheet_music/The Cordal - Jig.png"
+        alt="The Cordal - Jig">
 </div>
 
-<div class="w3-display-container w3-center w3-padding-large">
+<div class="w3-container w3-center w3-padding-large">
     <figcaption class="w3-center">
         <b>Vincent Campbell's</b>
     </figcaption>
-    <img 
+    <img
+        class="w3-image" 
         src="../static/images/sheet_music/vincient campbells - jig.png"
-        style="max-width: 800px;"
-        alt="Port Lairge - Polka"
-        class="w3-image"
+        alt="vincient campbells"
     >
 </div>
 
 <h2>Polka: Siege of Ennis</h2>
 
-<div class="w3-display-container w3-center w3-padding-large">
+<div class="w3-container w3-center w3-padding-large">
     <figcaption class="w3-center">
         <b>Siege of Ennis</b>
     </figcaption>
-    <img 
+    <img
+        class="w3-image" 
         src="../static/images/sheet_music/Siege of Ennis - Polka.png"
-        style="max-width: 800px;"
-        alt="Port Lairge - Polka"
-        class="w3-image"
+        alt="Siege of Ennis"
     >
 </div>
 
 <h2>Reels: Jug of Punch - Watchmaker - Shaskeen</h2>
 <div class="w3-display-container w3-center w3-padding-large">
     <figcaption class="w3-center">
-        <b>Jug of Punch - Watchmaker - Shaskeen played by Jannell Canerday and John Walsh</b>
+        <b>Jug of Punch - Watchmaker - Shaskeen played by Jannell C. and John W.</b>
     </figcaption>
     <audio controls>
         <source src="../static/audio/Jug of Punch - Watchmaker - Shaskeen (Reels).mp3" type="audio/mp3">
@@ -93,7 +87,7 @@
 <h2>Madame Maxwell (aka Planxty Miss Maxwell, by Turlough O'Carolan)</h2>
 <div class="w3-display-container w3-center w3-padding-large">
     <figcaption class="w3-center">
-        <b>Madame Maxwell played by Jannell Canerday and John Walsh</b>
+        <b>Madame Maxwell played by Jannell C. and John W.</b>
     </figcaption>
     <audio controls>
         <source src="../static/audio/Madame Maxwell.mp3" type="audio/mp3">
