--- a/blog_data/html_files/_blank_blog_template.html
+++ b/blog_data/html_files/_blank_blog_template.html
@@ -10,15 +10,14 @@
 </p>
 
 <!-- Image -->
-<div class="w3-display-container w3-center w3-padding-small">
+<div class="w3-container  w3-center w3-padding-small">
     <img 
-    src="../static/images/image0001.png"
-    alt="picture"
-    class="w3-image"
->
-<figcaption class="w3-center">
-    <b>Image Caption</b>
-</figcaption>
+        class="w3-image"
+        src="../static/images/image0001.png"
+        alt="picture">
+    <figcaption class="w3-center">
+        <b>Figure</b>
+    </figcaption>
 </div>
 
 <!-- Audio -->
