Update staking blog post

--- a/blog_data/html_files/Staking_Plan_Creation.html
+++ b/blog_data/html_files/Staking_Plan_Creation.html
@@ -2,3 +2,33 @@
     <iframe class="responsive-iframe" src="https://www.youtube.com/embed/BaC86JPEvCk">
     </iframe>
 </div>
+
+<p>
+    In this recording, I go through the process of creating a staking plan using AutoCAD 2024 with the Carlson Civil suite.
+I start by selecting points for a parking lot. To establish
+a base drawing for my staking plan, I copy relevant line work from an existing CAD file.
+</p>
+
+<p>
+    After setting up my drawing, I annotate the selected points, making sure that all elevations are set to zero. I focus on marking
+significant points from the drawing.
+</p>
+
+<p>
+  Next, I create a coordinate file for the selected points, using a systematic numbering and description process.
+I demonstrate how to add these points using the Carlson suite, ensuring that I capture all critical locations in
+the parking lot. Using screen pick utilities helps me select and document stakeout points in an organized manner.  
+</p>
+
+<p>
+    Once I have established the points, I create a table summarizing them, including their coordinates and descriptions. I also
+    note additional information such as the radii of curves, for reference. I go over how to update the table and 
+    adjust the points for better visibility within the CAD environment.
+</p>
+
+<p>
+    Finally, I export the staking plan to a text file, which allows me to easily import it into surveying equipment for fieldwork.
+    I wrap up the session by previewing and printing the final staking plan, ensuring I have a clear reference for the points I'll 
+    be staking out on-site. This process highlights the importance of careful planning, accurate documentation, and effective use of
+    CAD tools in civil engineering tasks.
+</p>
