add clover image

--- a/html_projects/spring-2025-whistle-class/sign-up.html
+++ b/html_projects/spring-2025-whistle-class/sign-up.html
@@ -6,6 +6,7 @@
     <meta example-website="https://reedsy.com/learning">
     <title>Carver Irish Whistle Class</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="static/img/clover.jpeg">
     <style>
         :root {
             --primary: #019f26;
