--- a/html_projects/fall-2025-music-class/sign-up.html
+++ b/html_projects/fall-2025-music-class/sign-up.html
@@ -6,7 +6,7 @@
     <meta example-website="https://reedsy.com/learning">
     <title>Carver Irish Whistle Class</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="static/img/clover.jpeg">
+    <link rel="icon" type="image/x-icon" href="static/img/clover.jpg">
     <style>
         :root {
             --primary: #019f26;
@@ -73,7 +73,7 @@
 
         .hero {
             min-height: 100vh;
-            background: linear-gradient(rgba(26, 31, 36, 0.8), rgba(26, 31, 36, 0.9)), url('static/img/whistle_004.jpg');
+            background: linear-gradient(rgba(26, 31, 36, 0.8), rgba(26, 31, 36, 0.9)), url('static/img/Flute_and_Fiddle.jpeg');
             background-size: cover;
             background-position: center;
             display: flex;
