--- a/html_projects/fall-2025-music-class/sign-up.html
+++ b/html_projects/fall-2025-music-class/sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta example-website="https://reedsy.com/learning">
-    <title>Carver Irish Whistle Class</title>
+    <title>Fall 2025 Sign-Ups</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="static/img/clover.jpg">
     <style>
