sign up page updates

--- a/html_projects/fall-2025-music-class/sign-up.html
+++ b/html_projects/fall-2025-music-class/sign-up.html
@@ -391,9 +391,10 @@
 
             <div class="tag">IN-PERSON COURSE</div>
 
-            <p>Will be learning Irish melodies on a melody instrument (fiddle, flute, whistle, mandolin, etc.) with the
-                goal to learn sets and be able to play those sets with others. Will alternate between learning a tune from
-                different instructors that play whistle, flute, and fiddle.</p>
+            <p>We will be learning Irish melodies on a melody instrument (fiddle, flute, whistle, mandolin, etc.) with the
+                goal to learn sets and be able to play those sets with others. Instructors play flute, whistle, and fiddle
+                as their primary instruments and will alternate leading each week.
+            </p>
             
             <div class="countdown">
                 <div class="time-block">
@@ -426,8 +427,8 @@
         <div class="schedule">
             <div class="schedule-card">
                 <h3>Class Dates</h3>
-                <p>7 Mondays:</p>
-                <p>September 15, September 22, September 29, October 6, October 13, October 20, October 27</p>
+                <p>7 Consecutive Mondays</p>
+                <p>Sept. 15 to Oct. 27</p>
             </div>
             <div class="schedule-card">
                 <h3>Time</h3>
@@ -484,27 +485,31 @@
         <div class="section-title">
             <h2>Meet Your Instructors</h2>
         </div>
-        <div class="instructor">
-            <img src="static/img/head_shot.jpg?height=300&width=300" alt="Instructor portrait">
+                <div class="instructor">
+            <img src="static/img/sarah_square.jpg?height=300&width=300" alt="Instructor portrait">
             <div>
-                <h3>Clayton Cook</h3>
-                <p>I'm a tin whistle and flute player with over 
-                    5 years of experience. I have a passion for playing traditional Irish music, especially in local sessions, and am
-                    excited to teach here in Lexington. My goal is 
-                    to help you discover the joy of playing traditional Irish music. Join me in 
-                    this exciting journey and become part of a growing musical community
-                    here in Lexington, Kentucky!</p>
+                <h3>Sarah Aldiab</h3>
+                <p>
+                    Sarah is a violinist, violist, and music teacher. She holds a Bachelor’s degree in music
+                    and has taught private and group lessons for 11 years in KY and WA. Sarah has interests in a
+                    variety of styles, playing and teaching classical, Irish, and rock/pop genres. Sarah has
+                    performed with the groups Electria, Volare String Quartet, The Highland Chamber Players,
+                    String Elegance, The Kentucky Bach Choir, and in various musicals and other programs.
+                    Sarah learned to play Irish fiddle music from a young age by playing in sessions. Attending
+                    festivals like Tional and Swannanoa, and from great fiddlers like James Burn and
+                    Kevin McKee. She hopes to help others pursue their musical interests and enjoy learning Irish
+                    music.
+                </p>
             </div>
         </div>
         <div class="instructor">
-            <img src="static/img/sarah_head_shot.png?height=300&width=300" alt="Instructor portrait">
+            <img src="static/img/clayton_square.jpg?height=300&width=300" alt="Instructor portrait">
             <div>
-                <h3>Sarah Aldiab</h3>
-                <p>Sarah is an experienced teacher and performer of violin/fiddle and viola. She has taught all
-                    ages and many styles, including classical, Celtic fiddle, pop/rock, and folk music. Performing
-                    professionally since 2014, Sarah has played in many classical ensembles for weddings and events,
-                    as well as in Celtic music groups and in an electric rock string ensemble called Electria. Sarah
-                    is a graduate of Eastern Kentucky University, with a Bachelor of Music degree in Music Performance.</p>
+                <h3>Clayton Cook</h3>
+                <p>Clayton is a tin whistle and flute player with over 
+                    5 years of experience. He has a passion for playing traditional Irish music, especially in local sessions, and is
+                    excited to teach here in Lexington. His goal is 
+                    to help you discover the joy of playing traditional Irish music.
             </div>
         </div>
     </section>
@@ -567,8 +572,8 @@
                         tin whistle, flute, and fiddle. These are the instruments that the instructors
                         play and will be teaching on. If you play one another melody instrument,
                         such as mandolin, guitar, etc., you can attend the class and learn the tunes
-                        with us. We may be limited with instrument specific knowledge, but I will
-                        do my best to help you learn the tunes.
+                        with us. We may be limited with instrument specific knowledge, but we will
+                        do our best to help you learn the tunes.
                     </p>
                 </div>
             </div>
@@ -630,8 +635,8 @@
             <p>
                 If you want to go ahead and make a $140 payment
                 before the class, you can click the button below
-                and pay me via my PayPal. Input the amount and include
-                "Irish Melodies for Melody Players" for what this is for.
+                and pay via my PayPal. Input the amount and include
+                "Irish Melodies 2025" for what this is for.
                 If you'd rather pay in person, that's fine too. I'm looking forward
                 to meeting you!
             </p><br>
