update image links

--- a/html_projects/fall-2025-music-class/sign-up.html
+++ b/html_projects/fall-2025-music-class/sign-up.html
@@ -486,7 +486,7 @@
             <h2>Meet Your Instructors</h2>
         </div>
                 <div class="instructor">
-            <img src="static/img/sarah_square.jpg?height=300&width=300" alt="Instructor portrait">
+            <img src="static/img/sarah_square.JPG?height=300&width=300" alt="Instructor portrait">
             <div>
                 <h3>Sarah Aldiab</h3>
                 <p>
@@ -503,7 +503,7 @@
             </div>
         </div>
         <div class="instructor">
-            <img src="static/img/clayton_square.jpg?height=300&width=300" alt="Instructor portrait">
+            <img src="static/img/clayton_square.JPG?height=300&width=300" alt="Instructor portrait">
             <div>
                 <h3>Clayton Cook</h3>
                 <p>Clayton is a tin whistle and flute player with over 
