--- a/html_projects/fall-2025-music-class/sign-up.html
+++ b/html_projects/fall-2025-music-class/sign-up.html
@@ -420,6 +420,15 @@
         </div>
     </section>
 
+    <section class="video-section" id="course-preview">
+        <div class="video-container">
+            <iframe src="https://www.youtube.com/embed/TYl8-Hhh1CI" title="Course Preview Video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div>
+            <a href="https://www.youtube.com/playlist?list=PLa_V7nLj5WRYrGpFWWLYxHSfM23hI8E0f" class="btn btn-primary" target="_blank">See more videos</a>
+        </div>
+    </section>
+
     <section class="section" id="schedule">
         <div class="section-title">
             <h2>Course Information</h2>
@@ -570,7 +579,7 @@
                 <div class="faq-answer">
                     <p>The primary instruments that will be used to teach during the class will be
                         tin whistle, flute, and fiddle. These are the instruments that the instructors
-                        play and will be teaching on. If you play one another melody instrument,
+                        play and will be teaching on. If you play another melody instrument,
                         such as mandolin, guitar, etc., you can attend the class and learn the tunes
                         with us. We may be limited with instrument specific knowledge, but we will
                         do our best to help you learn the tunes.
@@ -606,7 +615,7 @@
                     <span class="toggle">+</span>
                 </div>
                 <div class="faq-answer">
-                    <p>We will be learning Irish traditional tunes such as polkas, jigs, reels, and slip jigs.</p>
+                    <p>We will be learning Irish traditional tunes such as jigs, reels, and hornpipes.</p>
                 </div>
             </div>
             <div class="faq-item">
