McTeggart title update

--- a/html_projects/fall-2025-music-class/sign-up.html
+++ b/html_projects/fall-2025-music-class/sign-up.html
@@ -467,14 +467,14 @@
             <h2>Location</h2>
         </div>
         <div class="location">
-            <h3>McTaggart Dance School Studio, Lexington, Kentucky</h3>
+            <h3>McTeggart Irish Dance Studio, Lexington, Kentucky</h3>
             <p>
-                Will be meeting at the McTaggart Dance School Studio. The class could be either at
+                Will be meeting at the McTeggart Irish Dance Studio. The class could be either at
                 the current location, 3519 Lansdowne Dr, Lexington, KY 40517, or at the new location,
                 570 Delzan Pl, First Floor (Suites 12-13), Lexington, KY 40503. They are about an 8
-                minute drive between each other. The current plan is for McTaggart to move mid-September
+                minute drive between each other. The current plan is for McTeggart to move mid-September
                 but the exact date is still not hard set. We will start at the current Lansdowne location
-                and move when McTaggart moves into the new studio.
+                and move when McTeggart moves into the new studio.
             </p>
             <br><br>
             <p>
